fixed button alignment and acl key in PUT payload

--- a/src/app/components/core/control-dispatcher/add-control-script/add-step/add-step-value/add-step-value.component.css
+++ b/src/app/components/core/control-dispatcher/add-control-script/add-step/add-step-value/add-step-value.component.css
@@ -1,4 +1,4 @@
-.field-body .field {
+.field-body .field:not(:last-child) {
   margin-bottom: 5px;
 }
 
